<resources>
    <string name="app_name">PatientsCard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="bodyWeight">Body Weight</string>
    <string name="bodyMassIndex">Body Mass Index</string>
    <string name="systolicBloodPressure">Systolic Blood Pressure</string>
    <string name="diastolicBloodPressure">Diastolic Blood Pressure</string>
    <string name="search">Search</string>
    <string name="wait_a_moment">Wait a moment...</string>
    <string name="patients">Patientd</string>
    <string name="medications">Medications</string>
    <string name="patient_data">Patient Data</string>
    <string name="bodyHeight">Body Height</string>
    <string name="all_observations">All Observtions</string>
    <string name="medications_requests">Medications Requests</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
</resources>
